--- a/broadway/index.html
+++ b/broadway/index.html
@@ -2,61 +2,61 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Broadway Design/title>
-    <link rel="stylesheet" href="./resources/css/style.css">
-  </head>
-  <body>
-    <!--Title Area-->
-    <div id="home">
-      <h1>Broadway Design</h1>
-      <!--Navigation Area-->
-      <span id="navigation">
-        <a href="#home">Home</a>
-        <a href="#process">Process</a>
-        <a href="#portfolio">Work</a>
-        <a href="#team">Team</a>
-        <a href="contact"Contact</a></span>
-        </div>
-        <!--Process Area-->
-        <div id="process">
-          <h2>Our Process</h2>
-          <img src="./resources/identify.svg">
-          <h3>Identify</h3>
-          <p>We focus on the most important details.
-          </p>
-          <img src="./resources/understand.svg">
-          <h3>Understand</h3>
-          <p>We study our projects inside and out.
-          </p>
-          <img src="./resources/execute.svg">
-          <h3>Execute</h3>
-          <p>We put everything we have into our work.
-          </p>
-        </div>
-        <h3 id=>Designed in New York</h3>
-        <div id="portfolio">
-          <h3>Portfolio</h3>
-          <p>Coming Soon
-          </p>
-        </div>
-        <div id="team">
-          <h3>Team</h3>
-          <p>We're Hiring!
-          </p>
-        </div>
-        <!--Contact Area-->
-        <div id="contact">
-          <h3>Contact</h3>
-          <p>Phone: (555)-555-5555
-          </p>
-          <p>E-mail: test@example.com
-          </p>
-          <p>Twitter: @test
-          </p>
-        </div>
-        <!--Footer Area-->
-        <div id="footer">
-          <span id="copyright">&copy; Broadway 2016</span>
-          <span id="navigation"><a href="#home">Home</a> <a href="#process">About</a> <a href="#portfolio">Work</a> <a href="#team">Team</a> <a href="#contact">contact</a></span>
-        </body>
-        </html>
+  <title>Broadway Design</title>
+  <link rel="stylesheet" href="./resources/css/style.css">
+</head>
+<body>
+  <div id="home">
+    <h1>Broadway Design</h1>
+    <p><a href="#home">Home</a>
+    </p>
+    <p><a href="#process">Process</a>
+    </p>
+    <p><a href="#portfolio">Work</a>
+    </p>
+    <p><a href="#team">Team</a>
+    </p>
+    <p><a href="contact">Contact</a>
+    </p>
+  </div>
+  <div id="process">
+    <h2>Our Process</h2>
+    <img src="./resources/identify.svg">
+    <h3>Identify</h3>
+    <p>We focus on the most important details.
+    </p>
+    <img src="./resources/understand.svg">
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.
+    </p>
+    <img src="./resources/execute.svg">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.
+    </p>
+    <h3 id="newyork">Designed in New York</h3>
+  </div>
+  <div id="portfolio">
+    <h3>Portfolio</h3>
+    <p>Coming Soon
+    </p>
+  </div>
+  <div id="team">
+    <h3>Team</h3>
+    <p>We're Hiring!
+    </p>
+  </div>
+  <div id="contact">
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555
+    </p>
+    <p>E-mail: test@example.com
+    </p>
+    <p>Twitter: @test
+    </p>
+  </div>
+  <div id="footer">
+    <span id="copyright">&copy; Broadway 2016</span>
+    <a href="#home">Home</a> <a href="#process">About</a> <a href="#portfolio">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a>
+  </div>
+</body>
+</html>
